[gd_scene load_steps=6 format=3 uid="uid://1acq5ymxfoq1"]

[ext_resource type="Script" uid="uid://muk8yf51gsvi" path="res://AM-testscript.gd" id="1_1efpq"]
[ext_resource type="AudioStream" uid="uid://ccribdlpg8fc3" path="res://Audio/BGM/FireflyGirl_SoundTrack.mp3" id="2_n1iin"]
[ext_resource type="AudioStream" uid="uid://bfhmae70c6p22" path="res://Audio/BGM/SampleFlaire.mp3" id="3_gje3n"]
[ext_resource type="AudioStream" uid="uid://lvk2288chxbj" path="res://Audio/BGM/StepinWintre.mp3" id="4_hejbi"]
[ext_resource type="AudioStream" uid="uid://c06p5drv0dpy6" path="res://Audio/BGM/sfx_scatterflies.ogg" id="5_hejbi"]

[node name="Main" type="Node2D"]
script = ExtResource("1_1efpq")
background_music = ExtResource("2_n1iin")
title_music = ExtResource("3_gje3n")
credits_music = ExtResource("4_hejbi")
sample_sfx = ExtResource("5_hejbi")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Hello World!
-nephew"

[node name="Button" type="Button" parent="."]
offset_left = 6.0
offset_top = 59.0
offset_right = 123.0
offset_bottom = 90.0
text = "Title"

[node name="Button2" type="Button" parent="."]
offset_left = 6.0
offset_top = 97.0
offset_right = 123.0
offset_bottom = 128.0
text = "Game"

[node name="Button3" type="Button" parent="."]
offset_left = 6.0
offset_top = 135.0
offset_right = 123.0
offset_bottom = 166.0
text = "Credits"

[node name="Button4" type="Button" parent="."]
offset_left = 6.0
offset_top = 172.0
offset_right = 123.0
offset_bottom = 203.0
text = "Effect"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
